# gecko

./: .gitignore  .gitmodules  AppLauncher_8h_source.html  CMakeLists.txt  HandDescriptor_8h_source.html  HandDetector_8h_source.html  README.md  StateMachine_8h_source.html  annotated.html  backgroundSubstractor_8h_source.html  classAppLauncher-members.html  classAppLauncher.html  classAppLauncher__coll__graph.map  classAppLauncher__coll__graph.md5  classAppLauncher_a1301a79cdb765c97700e8ab727dc3a8a.html  classAppLauncher_a14e7aa5e9019a9c656a63f51f9f1ea10.html  classAppLauncher_a1fb46e1a61278fc3f845843343fce455.html  classAppLauncher_a6138687216c50cb1807dec032d86f5da.html  classAppLauncher_a6138687216c50cb1807dec032d86f5da_a6138687216c50cb1807dec032d86f5da_cgraph.md5  classAppLauncher_a6e22b90f96afed8dbbb31e081b41d88a.html  classAppLauncher_a7b78b9998a3dd09b12e13812710175e4.html  classAppLauncher_a93a536dd97a69aa17119e48c97a92659.html  classAppLauncher_a95d3ac01a7f0eb1231550645c008c326.html  classAppLauncher_a9a6005e9255722ffc318692d986baa3f.html  classAppLauncher_aa3981d66efed376f90f58a80f9ed57ea.html  classAppLauncher_ab669e847d6ad97db6560eb47de0583d0.html  classAppLauncher_adf495e9b527a4bbbde929284cf92e85e.html  classAppLauncher_adf495e9b527a4bbbde929284cf92e85e_adf495e9b527a4bbbde929284cf92e85e_cgraph.map  classConvexityDefect-members.html  classConvexityDefect.html  classConvexityDefect_a179caa0a4432265c0cf8739ab79460d9.html  classConvexityDefect_a18bc9f7711bc12f544e964bfdb4b5d21.html  classConvexityDefect_a226222c7756c3f5eeb454a21e8bb70b6.html  classConvexityDefect_a26dd993281a6dcf71475bcacccd21b87.html  classConvexityDefect_a94dd9e5ad7f31be14c2662d06a69de55.html  classConvexityDefect_aa89b314fef62b53b1a23f41523c55513.html  classConvexityDefect_af8ff383b2035a4ced5b10f817aae851d.html  classHandDescriptor-members.html  classHandDescriptor.html  classHandDescriptor__coll__graph.map  (+180 more)
data/: apps.config
doc/: hand_description.dia  hand_filter.dia
doc/images/: gesture_recognition.dia  hand_description_spa.dia  hand_filter_spa.dia
doc/memoria/: algorithm.tex  doxygen.tex  introduction.tex  memoria.tex  report.tex  userguide.tex
doc/report/: algorithm.tex  doxygen.tex  introduction.tex  report.tex  userguide.tex
search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6b.html  all_6d.html  all_6f.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_68.html  classes_73.html  functions_61.html  functions_62.html  functions_63.html  functions_64.html  functions_66.html  functions_68.html  functions_6d.html  functions_70.html  functions_73.html  functions_75.html  search.css  search.js  variables_5f.html  variables_62.html  variables_63.html  variables_64.html  variables_66.html  (+7 more)
src/: CMakeLists.txt  Doxyfile
src/apps/: CMakeLists.txt  finger_detector_pictures.cpp  fingers.cpp  gecko.cpp  gesture_recognition.cpp  hand.cpp  image_analyzer.cpp
src/apps/yarp_gecko/: CMakeLists.txt  GeckoModule.cpp  GeckoModule.hpp  main.cpp
src/libraries/: AppLauncher.cpp  AppLauncher.h  CMakeLists.txt  FingerDetector.cpp  FingerDetector.h  HandDescription.cpp  HandDescription.h  HandDescriptor.cpp  HandDescriptor.h  HandDetector.cpp  HandDetector.h  StateMachine.cpp  StateMachine.h  backgroundSubstractor.cpp  backgroundSubstractor.h  handUtils.cpp  handUtils.h  mouse.cpp  mouse.h
